fix issue #956
fix issue #956
fix External Link text box is overlap the beneath list

--- a/src/shared/components/Settings/Account/LinkedAccount/styles.scss
+++ b/src/shared/components/Settings/Account/LinkedAccount/styles.scss
@@ -12,6 +12,7 @@
     form {
       display: flex;
       flex-direction: column;
+      min-height: 60px;
 
       label {
         @include roboto-medium;
